Closed
Bug 1837333
Opened 2 years ago
Closed 2 years ago
Do not attempt to clear the WebRTC stats history
Categories
(Core :: WebRTC, defect, P1)
Core
WebRTC
Tracking
()
RESOLVED
FIXED
116 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox114 | --- | unaffected |
| firefox115 | --- | fixed |
| firefox116 | --- | fixed |
People
(Reporter: ng, Assigned: ng)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
dmeehan
:
approval-mozilla-beta+
|
Details | Review |
We shouldn't clear the stats history on the child process.
| Assignee | ||
Comment 1•2 years ago
|
||
The stats history only lives on the parent process. Clearing the logs from about:webrtc causes a (non-release) assertion. This was missed in testing. I will look into changing that in a follow up Bug 1837335.
Comment 2•2 years ago
|
||
Set release status flags based on info from the regressing bug 1830790
status-firefox114:
--- → unaffected
status-firefox115:
--- → affected
status-firefox116:
--- → affected
status-firefox-esr102:
--- → unaffected
| Assignee | ||
Comment 3•2 years ago
|
||
Comment on attachment 9338002 [details]
Bug 1837333 - webrtc stats history should be cleared on parent process only;r?pehrsons
Beta/Release Uplift Approval Request
- User impact if declined: Opening about:webrtc in beta will cause a crash
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This simple patch only restricts a code path to the parent process.
- String changes made/needed:
- Is Android affected?: No
Attachment #9338002 -
Flags: approval-mozilla-beta?
Comment 4•2 years ago
|
||
:ng is there anything blocking landing this? Then relman can review the uplift request
Flags: needinfo?(na-g)
Pushed by na-g@nostrum.com:
https://hg.mozilla.org/integration/autoland/rev/f5c0e709eb52
webrtc stats history should be cleared on parent process only;r=pehrsons
Comment 6•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch
Comment 7•2 years ago
|
||
Comment on attachment 9338002 [details]
Bug 1837333 - webrtc stats history should be cleared on parent process only;r?pehrsons
Approved for 115.0b6.
Attachment #9338002 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 8•2 years ago
|
||
| bugherder uplift | ||
| Assignee | ||
Updated•2 years ago
|
Flags: needinfo?(na-g)
You need to log in
before you can comment on or make changes to this bug.
Description
•