Bug 1837333 - webrtc stats history should be cleared on parent process only;r=pehrsons, a=dmeehan

The stats history only lives on the parent process. Clearing the logs from about:webrtc causes a (non-release) assertion. This was missed in testing. I will look into changing that in a follow up Bug 1837335.

Differential Revision: https://phabricator.services.mozilla.com/D180299